// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproTransmission > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="
    amelipro-transmission
    w-100
  "
  id="modified-unique-id-container"
>
  <div class="
    amelipro-transmission__wrapper
    w-100
  ">
    <amelipro-card-stub
      bordercolor="ap-grey-lighten-2"
      bordered="true"
      cardcolor="ap-white"
      cardtitle="Modified transmission card title"
      classes="mb-6 amelipro-transmission__card"
      divider="true"
      headerrightwidth="50%"
      nocardheader="false"
      rightpart="false"
      rightpartwidth="25%"
      titlecolor="ap-grey-darken-1"
      titlelevel="2"
      uniqueid="modified-unique-id-card"
    ></amelipro-card-stub>
  </div>
  <div
    class="
      align-center
      amelipro-transmission__actions
      d-flex
      justify-space-between
    "
    id="modified-unique-id-action-wrapper"
  >
    <div class="amelipro-transmission__actions__left">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          amelipro-transmission__print-btn
          mb-4
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        href="/modified-print-href"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="3rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        to="/modified-print-to"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-print-btn"
      ></amelipro-btn-stub>
    </div>
    <div class="
      amelipro-transmission__actions__right
      d-flex
      justify-end
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="true"
        class="
          amelipro-transmission__alternate-btn
          mr-2
        "
        color="ap-white"
        disabled="false"
        hovercolor="ap-blue-lighten-3"
        hoverunderline="false"
        href="/modified-modify-href"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="3rem"
        size="60px"
        text="false"
        textcolor="ap-blue-darken-1"
        to="/modified-modify-to"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-alternate-btn"
      ></amelipro-btn-stub>
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="amelipro-transmission__confirm-btn"
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="false"
        href="/modified-confirm-href"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="3rem"
        size="60px"
        text="false"
        textcolor="ap-white"
        to="/modified-confirm-to"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-confirm-btn"
      ></amelipro-btn-stub>
    </div>
  </div>
</div>
`;

exports[`AmeliproTransmission > Snapshots > renders the component with only required properties filled in 1`] = `
<div class="
  amelipro-transmission
  w-100
">
  <div class="
    amelipro-transmission__wrapper
    w-100
  ">
    <amelipro-card-stub
      bordercolor="ap-grey-lighten-2"
      bordered="true"
      cardcolor="ap-white"
      classes="mb-6 amelipro-transmission__card"
      divider="true"
      headerrightwidth="50%"
      nocardheader="false"
      rightpart="false"
      rightpartwidth="25%"
      titlecolor="ap-grey-darken-1"
      titlelevel="2"
    ></amelipro-card-stub>
  </div>
  <div class="
    align-center
    amelipro-transmission__actions
    d-flex
    justify-space-between
  ">
    <div class="amelipro-transmission__actions__left">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          amelipro-transmission__print-btn
          mb-4
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="3rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
    </div>
    <div class="
      amelipro-transmission__actions__right
      d-flex
      justify-end
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="true"
        class="
          amelipro-transmission__alternate-btn
          mr-2
        "
        color="ap-white"
        disabled="false"
        hovercolor="ap-blue-lighten-3"
        hoverunderline="false"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="3rem"
        size="60px"
        text="false"
        textcolor="ap-blue-darken-1"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="amelipro-transmission__confirm-btn"
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="false"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="3rem"
        size="60px"
        text="false"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
    </div>
  </div>
</div>
`;

exports[`AmeliproTransmission > render correctly 1`] = `
<div
  class="
    amelipro-transmission
    w-100
  "
  id="my-transmission-id-container"
>
  <div class="
    amelipro-transmission__wrapper
    w-100
  ">
    <div
      class="
        amelipro-card
        amelipro-transmission__card
        d-flex
        flex-column
        flex-md-row
        mb-6
        w-100
      "
      id="my-transmission-id-card-container"
      style="background-color: #FFFFFF; border: 1px solid #DDDEDE;"
    >
      <div
        class="amelipro-card__left-part"
        id="my-transmission-id-card-left-part"
        style="width: 100%;"
      >
        <div
          class="
            amelipro-card__header
            w-100
          "
          id="my-transmission-id-card-header"
        >
          <div
            class="
              align-sm-center
              amelipro-card__header-content
              d-flex
              flex-column
              flex-sm-row
              w-100
            "
            style="border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #DDDEDE;"
          >
            <div
              class="amelipro-card__header-slot-wrapper--left"
              id="my-transmission-id-card-header-left-part"
              style="width: 100%;"
            >
              <p
                aria-level="2"
                class="
                  amelipro-card__title
                  mb-0
                  text-h2
                "
                id="my-transmission-id-card-title"
                role="heading"
                style="color: #1A1B1B;"
              >
                Titre de la carte
              </p>
            </div>
            <!-- v-if -->
          </div>
        </div>
        <div
          class="amelipro-card__content"
          id="my-transmission-id-card-content"
        ></div>
      </div>
      <!-- v-if -->
    </div>
  </div>
  <div
    class="
      align-center
      amelipro-transmission__actions
      d-flex
      justify-space-between
    "
    id="my-transmission-id-action-wrapper"
  >
    <div class="amelipro-transmission__actions__left">
      <button
        class="
          amelipro-btn
          amelipro-transmission__print-btn
          amelipro-transmission__print-btn
          elevation-0
          mb-4
          mb-4
          text-ap-blue-darken-1
          text-none
          text-none
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-text
          v-theme--light
        "
        id="my-transmission-id-print-btn"
        style="height: auto; min-height: auto; padding: 0px;"
        type="button"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="
            align-center
            amelipro-custom-btn
            d-flex
            flex-row
          ">
            Imprimer sans transmettre
            <!-- v-if -->
            <!-- v-if -->
          </span>
        </span>
        <!---->
        <!---->
      </button>
    </div>
    <div class="
      amelipro-transmission__actions__right
      d-flex
      justify-end
    ">
      <button
        class="
          amelipro-btn
          amelipro-btn--style
          amelipro-transmission__alternate-btn
          amelipro-transmission__alternate-btn
          bg-ap-white
          elevation-0
          mr-2
          mr-2
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-flat
          v-theme--light
        "
        id="my-transmission-id-alternate-btn"
        style="height: auto; min-height: 2.5rem; color: #00749C !important; border: 2px solid #00749C !important; background-color: white;"
        type="button"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="
            align-center
            amelipro-custom-btn
            d-flex
            flex-row
          ">
            Modifier
            <!-- v-if -->
            <!-- v-if -->
          </span>
        </span>
        <!---->
        <!---->
      </button>
      <button
        class="
          amelipro-btn
          amelipro-btn--style
          amelipro-transmission__confirm-btn
          amelipro-transmission__confirm-btn
          bg-ap-blue-darken-1
          elevation-0
          v-btn
          v-btn--density-default
          v-btn--flat
          v-btn--size-default
          v-btn--variant-flat
          v-theme--light
        "
        id="my-transmission-id-confirm-btn"
        style="height: auto; min-height: 2.5rem; color: #FFFFFF !important;"
        type="button"
      >
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <span class="
            align-center
            amelipro-custom-btn
            d-flex
            flex-row
          ">
            Transmettre
            <!-- v-if -->
            <!-- v-if -->
          </span>
        </span>
        <!---->
        <!---->
      </button>
    </div>
  </div>
</div>
`;
